# app/Http/Requests/Admin/Auth/LoginFormRequest.php
@@ -1,0 +1,42 @@
+<?php
+
+namespace App\Http\Requests\Admin\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class LoginFormRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => ['required', 'email'],
+            'password' => ['required'],
+        ];
+    }
+
+    /**
+     * @return array
+     */
+    public function fields(): array
+    {
+        return [
+            'email' => $this->input('email'),
+            'password' => $this->input('password'),
+        ];
+    }
+}
